--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,24 +1,25 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="#">Dating App</a>
+      <a class="navbar-brand" routerLink="/">Dating App</a>
       
       @if (accountService.currentUser()) {
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link">Matches</a>
+            <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Lists</a>
+            <a routerLink="/lists" class="nav-link"  routerLinkActive="active">Lists</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link">Messages</a>
+            <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
           </li>
          
         </ul>
       }
       @if (accountService.currentUser()) {
         <div id="button-animated" class="dropdown" dropdown>
-          <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle >Welcome User</a>
+          <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle >
+            Welcome {{accountService.currentUser()?.username | titlecase}}</a>
           <div id="dropdown-animated" *dropdownMenu class="dropdown-menu" aria-labelledby="button-animated">
             <a class="dropdown-item">Edit Profile</a>
             <div class="dropdown-divider"></div>
@@ -34,7 +35,7 @@
           [(ngModel)]="model.Username" class="form-control me-2" placeholder="Username">
           <input name="Password"
           [(ngModel)]="model.password" class="form-control me-2" placeholder="Password" type="password">
-          <button class="btn btn-outline-success" type="submit">Login</button>
+          <button class="btn btn-success" type="submit">Login</button>
         </form>
         }
        
