--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -21,7 +21,7 @@
           <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle >
             Welcome {{accountService.currentUser()?.username | titlecase}}</a>
           <div id="dropdown-animated" *dropdownMenu class="dropdown-menu" aria-labelledby="button-animated">
-            <a class="dropdown-item">Edit Profile</a>
+            <a routerLink="/member/edit" class="dropdown-item">Edit Profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" (click)="logOut()">Logout</a>
           </div>
