--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -83,7 +83,8 @@
                     
                 </tab>
                 <tab heading="Edit Photos">
-                    Photo edit will go here    
+                    <app-photo-edit [member]="member"
+                    (memberChange)="onMemberChange($event)"></app-photo-edit>
                 </tab>
                 
                
