--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -1,3 +1,8 @@
 .dropdown-toggle, .dropdown-item, .nav-item {
     cursor: pointer;
 }
+ img{
+    max-height: 50px;
+    border: 2px solid white;
+    display: inline;
+ }
